# calculato_rs

./: .gitattributes  Cargo.toml  README.md
c_lang/: add_value_action.c  backspace_value_action.c  base.c  combinations.c  insert_action.c  main.c  replace_action.c  sign_inv_action.c  sum_action.c  types.c
src/: lib.rs  main.rs  solver.rs
src/actions/: add_value.rs  all.rs  append_value.rs  backspace.rs  divide_by.rs  eval.rs  increment_buttons.rs  inv10.rs  mirror.rs  mod.rs  multiply_by.rs  portal.rs  pow.rs  replace_values.rs  reverse.rs  shift_l.rs  shift_r.rs  sign_inv.rs  store.rs  sum_digits.rs
src/gui/: actions.rs  app.rs  mod.rs
src/tests/: add_value.rs  append_value.rs  backspace.rs  divide_by.rs  mod.rs  multiply_by.rs  replace_values.rs  sign_inv.rs  solver_tests.rs  sum_digits.rs
